- Exposed some methods to check which chunks a door might interact with when opening and if they are currently loaded or not.
- Added new config option "loadChunksForToggle" that determines how the plugin handles unloaded chunks. When set to true, it will load any necessary chunks and move the blocks without animation. When set to false, it will abort the toggle attempt (and not load any chunks).

Alpha 0.1.8.23
- Added full support for 1.16's new blocks so you no longer have to manually add them to the whitelist. Thanks, @thedarkonekiller, for the bug report!
- Permissions now default to OPs again.
- Removed Spiget in favor of GitHub releases, as Spiget proved to be too unreliable. 
- Renamed "bigdoors.user" permission node to "bigdoors.user.base", so that "bigdoors.user.*" will include the most important permissions as well.
- A portcullis will now respect its open direction, even if there is no space to go in that direction. Thanks, @xph11, for the bug report!

Alpha 0.1.8.22
- Abort initialization in certain invalid environments. This can be bypassed, but doing so is NOT SUPPORTED!!
- Added information about why a command failed if the plugin failed to initialize properly.
- Fixed portcullises and sliding doors getting 'stuck' when they could not find a direction to go in.
- Added configurable, global blocksToMove limit for doors such as sliding doors. This should help avoid unnecessary stress for servers caused by malicious players. Thanks, @Jim for the suggestion!
- Fixed Sliding Doors not properly reporting their old and new locations to the protection manager, allowing you to completely bypass it in certain situations. Thanks, @jim, for your report and your help!
- Fixed GUI-related NPE. Thanks, @JMCY26, for the bug report!
- Fixed being able to access "/bigdoors menu" even if you didn't have permission to access the menu. Thanks, @AntiMaid, for the report!