@@ -123,7 +123,8 @@ CREATOR.GENERAL.TooManyBlocks=&cYou are not allowed to create a door this big. Y
 CREATOR.PBRELOCATOR.Init=&aPower Block Relocation process initiated! You have 40 seconds to complete it.\nType /BDCancel to cancel the process.
 CREATOR.PBRELOCATOR.StickLore=This tool is used to change the location of a power block.\nSimply hit a new block and you can use that as the location.
 CREATOR.PBRELOCATOR.StickReceived=&aYou have been given a Big Door Relocator stick! You can use this tool to change the location of a powerblock. Just hit a new block!
-CREATOR.PBRELOCATOR.LocationInUse=&cInvalid Power Block Location selected! Location already in use by another door!
+CREATOR.PBRELOCATOR.LocationInUse=&cInvalid Power Block Location selected! The location already in use by another door!
+CREATOR.PBRELOCATOR.LocationTooFar=&cInvalid Power Block Location selected! The Location is too far from the door's engine!
 CREATOR.PBRELOCATOR.Success=&aPower Block Relocation successful! Don't forget to put a powerblock (default: Gold block) here! Otherwise, it won't work!
 CREATOR.PBINSPECTOR.Init=&aPower Block Inspection process initiated! You have 40 seconds to complete it.\nType /BDCancel to cancel the process.
 CREATOR.PBINSPECTOR.StickLore=This tool is used to inspect a power block.\nSimply hit a block and you will get the info of the door attached to it.
